--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,6 @@
 <ion-tabs color="light">
+    <ion-tab [root]="projects" tabTitle="projets" tabIcon="people"></ion-tab>
+    <ion-tab [root]="models" tabTitle="modeles" tabIcon="people"></ion-tab>
     <ion-tab [root]="users" tabTitle="Users" tabIcon="people"></ion-tab>
     <ion-tab [root]="chats" tabTitle="Chats" tabIcon="chatboxes"></ion-tab>
     <ion-tab [root]="profile" tabTitle="Account" tabIcon="person"></ion-tab>
